<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout"
    tools:context="com.example.jc.find_10.MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_gravity="top|center_horizontal"
        android:background="#88c20202">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtokno1"
            android:id="@+id/textView"
            />
    </ScrollView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_gravity="top|center_horizontal"
        android:background="#95049b04"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtokno2"
            android:id="@+id/textView2"/>
    </ScrollView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3"
        android:layout_gravity="top|center_horizontal"
        android:background="#8a6c7bc7"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtokno3"
            android:id="@+id/textView3"/>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tekst2"
            android:id="@+id/button2"
            android:onClick="send_button"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tekst1"
            android:id="@+id/button"
            android:onClick="reload_button"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tekst3"
            android:id="@+id/button3"
            android:onClick="test"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tekst7"
            android:id="@+id/button4"
            android:onClick="uruchom_ustawienia"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

</LinearLayout>
